# energy_price_prediction_machine_learning_project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: DESIGN.md  PRD.docx
src/energy_forecaster/: __init__.py  __main__.py  cli.py  composition.py
src/energy_forecaster/adapters/: __init__.py
src/energy_forecaster/adapters/clock/: __init__.py  system_clock.py
src/energy_forecaster/adapters/entsoe_client/: __init__.py  entsoe_py.py  in_memory.py
src/energy_forecaster/adapters/load_forecast_repo/: __init__.py  local_fs.py
src/energy_forecaster/adapters/load_observation_repo/: __init__.py  local_fs.py
src/energy_forecaster/adapters/logger/: __init__.py  structlog_logger.py
src/energy_forecaster/adapters/model_registry/: __init__.py  mlflow_registry.py
src/energy_forecaster/adapters/weather_client/: __init__.py  in_memory.py  open_meteo.py
src/energy_forecaster/adapters/weather_reading_repo/: __init__.py  local_fs.py
src/energy_forecaster/application/: __init__.py  errors.py
src/energy_forecaster/application/ports/: __init__.py  clock.py  entsoe_client.py  load_forecast_repository.py  load_observation_repository.py  logger.py  model_registry.py  weather_client.py  weather_reading_repository.py
src/energy_forecaster/application/use_cases/: __init__.py  ingest_entsoe_load.py  ingest_weather.py
src/energy_forecaster/config/: __init__.py  settings.py
src/energy_forecaster/contracts/: __init__.py  feature_matrix_schema.py  load_observation_schema.py  weather_reading_schema.py
src/energy_forecaster/dashboard/: __init__.py  app.py  charts.py  data.py
src/energy_forecaster/domain/: __init__.py  _validation.py
src/energy_forecaster/domain/entities/: __init__.py  load_forecast.py  load_observation.py  price_forecast.py  weather_reading.py
src/energy_forecaster/domain/rules/: __init__.py  promotion.py  retrain.py
src/energy_forecaster/domain/value_objects/: __init__.py  bidding_zone.py  energy.py  horizon.py  mape.py  model_version.py  price.py
src/energy_forecaster/pipelines/: __init__.py
src/energy_forecaster/pipelines/feature_engineering/: __init__.py  io.py  nodes.py  pipeline.py  runner.py
src/energy_forecaster/pipelines/inference/: __init__.py  forward.py  nodes.py  pipeline.py  runner.py
src/energy_forecaster/pipelines/monitoring/: __init__.py  metrics.py  nodes.py  runner.py
src/energy_forecaster/pipelines/training/: __init__.py  nodes.py  pipeline.py  runner.py
src/energy_forecaster/serving/: __init__.py  app.py  schemas.py
tests/: test_smoke.py
tests/integration/adapters/: test_local_fs_load_forecast_repository.py  test_local_fs_load_observation_repository.py  test_local_fs_weather_reading_repository.py  test_system_clock.py
tests/integration/adapters/model_registry/: test_mlflow_registry.py
tests/integration/dashboard/: test_app.py
tests/integration/pipelines/feature_engineering/: test_runner.py
tests/integration/pipelines/inference/: test_runner.py
tests/integration/pipelines/monitoring/: test_runner.py
tests/integration/pipelines/training/: test_runner.py
tests/integration/serving/: test_app.py
tests/live/: test_entsoe_py_live.py  test_open_meteo_live.py
tests/unit/: test_cli.py  test_composition.py  test_smoke.py
tests/unit/adapters/entsoe_client/: test_entsoe_py.py  test_in_memory.py
tests/unit/adapters/logger/: test_structlog_logger.py
tests/unit/adapters/weather_client/: test_in_memory.py  test_open_meteo.py
tests/unit/application/: fakes.py
tests/unit/application/use_cases/: test_ingest_entsoe_load.py  test_ingest_weather.py
tests/unit/config/: test_settings.py
tests/unit/contracts/: test_load_observation_schema.py  test_weather_reading_schema.py
tests/unit/dashboard/: test_charts.py  test_data.py
tests/unit/domain/: test_load_forecast.py  test_load_observation.py  test_price_forecast.py  test_value_objects.py  test_weather_reading.py
tests/unit/domain/rules/: test_promotion.py  test_retrain.py
tests/unit/pipelines/feature_engineering/: test_nodes.py
tests/unit/pipelines/inference/: test_forward.py  test_nodes.py
tests/unit/pipelines/monitoring/: test_metrics.py  test_nodes.py
tests/unit/pipelines/training/: test_nodes.py
tests/unit/serving/: test_schemas.py
