[project]
name = "energy-forecaster"
version = "0.1.0"
description = "Real-Time Energy Demand & Price Forecaster — production-grade MLOps portfolio project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Saurabh Bhardwaj", email = "saurabh.bhardwaj@delaware.co.uk" }]
keywords = ["mlops", "energy", "forecasting", "kedro", "mlflow", "feast"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
# Production runtime dependencies. Each entry must be justified by code that
# actually uses it — the rulebook forbids premature scaffolding.
#   pydantic / pydantic-settings : typed, validated env-var-driven config
#                                   (replaces ad-hoc os.environ access).
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # entsoe-py — Python wrapper over the ENTSO-E Transparency Platform XML API.
    # Brings pandas as a transitive dep; we declare pandas explicitly below
    # because the EntsoePyClient adapter uses pd.Timestamp / pd.isna directly.
    "entsoe-py>=0.6.0",
    "pandas>=2.2.0",
    # requests — keyless HTTP client used by OpenMeteoClient. Transitively
    # installed by entsoe-py too, but declared explicitly so a future
    # entsoe replacement does not silently strip it.
    "requests>=2.32.0",
    # structlog — structured logging used by the StructlogLogger adapter.
    # The application layer talks to a Logger Protocol; this dep stays
    # confined to adapters/logger/structlog_logger.py.
    "structlog>=24.4.0",
]

# Console scripts installed into the venv's bin/ on `uv sync`. Maps to the
# entrypoint at energy_forecaster/cli.py:main.
[project.scripts]
energy-forecaster = "energy_forecaster.cli:main"

# PEP 735 dependency groups — installed by `uv sync`, excluded from production wheels.
# We start with only the developer tooling. Domain libraries (pandas, kedro,
# mlflow, feast, fastapi, …) are added in later chunks as we actually use them —
# the rulebook forbids premature scaffolding.
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    # Type stubs for ``requests`` — published as a separate distribution
    # by the typeshed maintainers since requests doesn't ship inline.
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_forecaster"]

# ---------------------------------------------------------------------------
# Ruff — lint + format + import sort. One tool, fast.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Enabled rule families and why:
#   E, W  — pycodestyle errors/warnings (style baseline)
#   F     — pyflakes (unused imports, undefined names)
#   I     — isort (import ordering)
#   UP    — pyupgrade (use modern Python idioms)
#   B     — flake8-bugbear (likely-bug patterns, e.g. mutable defaults)
#   SIM   — flake8-simplify (avoidable complexity)
#   N     — pep8-naming
#   RUF   — ruff-specific rules
#   TID   — flake8-tidy-imports (we will later forbid framework imports from domain via this)
select = ["E", "W", "F", "I", "UP", "B", "SIM", "N", "RUF", "TID"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests may use fixtures with shadowed names and longer lines; relax there.
"tests/**/*.py" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict mode. The CLAUDE.md rulebook makes types a hard contract.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
pretty = true

# Third-party libraries without public type stubs. Their imports are
# confined to adapter modules per the dependency rule, so the loss of type
# safety stays at the boundary. We can revisit (e.g. add pandas-stubs) if
# adapter complexity grows.
[[tool.mypy.overrides]]
module = ["entsoe", "entsoe.*", "pandas", "pandas.*"]
ignore_missing_imports = true

# requests ships its own type hints since 2.32, so no override needed —
# the entsoe / pandas overrides above are kept because those libraries
# do not.

# ---------------------------------------------------------------------------
# Pytest — coverage gate matches the rulebook's >80% target.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=energy_forecaster",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    # Live tests (real network, real credentials) are opt-in. CI and local
    # `make test` skip them; run them deliberately via `make test-live`.
    "-m",
    "not live",
]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: tests that touch external services or containers",
    "e2e: end-to-end pipeline tests",
    "live: hits live external APIs (requires network and credentials; opt-in)",
]

[tool.coverage.run]
branch = true
source = ["src/energy_forecaster"]
# __main__.py is a four-line launch shim that only executes when the
# package is invoked via ``python -m energy_forecaster``. Tests cover the
# CLI logic via cli.main() directly; the shim has no business logic.
omit = ["src/energy_forecaster/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    # Protocol method bodies are pure type signatures — they exist as `...`
    # placeholders and are never executed at runtime. Excluding them lets
    # coverage reflect what is genuinely tested without padding around it.
    "^\\s*\\.\\.\\.\\s*$",
]
